# asimov-camera-module

./: CHANGES.md  Cargo.toml  Justfile  README.md
.asimov/: module.yaml
.cargo/: config.toml
.github/workflows/: ci.yaml  release.yaml
RustCameraTest/: ContentView.swift  RustBindings.swift  RustCameraTest-Bridging-Header 2.h  RustCameraTestApp.swift  asimov_camera_module.h
RustCameraTest.xcodeproj/: project.pbxproj
RustCameraTest.xcodeproj/xcuserdata/oleksandr.xcuserdatad/xcschemes/: xcschememanagement.plist
scripts/: smoke.sh
src/: cli.rs  core.rs  ffi.rs  ios_test.rs  lib.rs
src/avf-test/: main.rs
src/cataloger/: main.rs
src/reader/: main.rs
src/shared/: config.rs  driver.rs  error.rs  frame.rs  mod.rs  open.rs
src/shared/drivers/: android.rs  avf.rs  avfoundation.rs  camera2.rs  dshow.rs  ffmpeg.rs  v4l2.rs
src/shared/drivers/android/: camera_capture_session.rs  camera_device.rs  camera_manager.rs  camera_output_target.rs  camera_status.rs  capture_request.rs  capture_session.rs  capture_session_output.rs  capture_session_output_container.rs  image.rs  image_reader.rs  media_status.rs  native_window.rs
