# See: https://doc.rust-lang.org/cargo/reference/manifest.html

[package]
name = "asimov-camera-module"
version = "0.0.2"
authors = ["ASIMOV Community"]
edition = "2024"
#rust-version = "1.85"
description = "ASIMOV Camera module."
#documentation = "https://docs.rs/asimov-camera-module"
readme = true
homepage = "https://github.com/asimov-modules"
repository = "https://github.com/asimov-modules/asimov-camera-module"
license = "Unlicense"
keywords = ["asimov-module", "asimov", "ai"]
categories = ["command-line-utilities", "text-processing"]              # TODO
publish = false

[features]
default = ["all", "cli", "std"]
all = ["ffmpeg", "pretty", "tracing"]
cli = ["asimov-module/cli", "std", "dep:clap", "dep:clientele"]
std = ["asimov-module/std", "clap?/std", "clientele?/std"]
unstable = []

# Optional features:
ffmpeg = []
pretty = []
tracing = ["asimov-module/tracing", "clientele?/tracing"]

[dependencies]
asimov-module = { version = "25", default-features = false, features = ["std"] }
ctrlc = "3.5"
derive_more = { version = "2", features = ["display", "error", "from"] }
dogma = { version = "0.1", features = ["traits"] }
image = "0.25"
image_hasher = { version = "3.0", features = ["fast_image_resize"] }
know = { version = "0.2.11", features = ["serde"] }
nokhwa = { version = "0.10", features = ["input-native"] }
scopeguard = { version = "1.2", default-features = false }
serde_json = "1.0"
thiserror = "2.0"

# Optional integrations:
clap = { version = "4.5", default-features = false, features = [
  "std",
], optional = true }
clientele = { version = "0.3.8", default-features = false, features = [
  "clap",
  "std",
], optional = true }

[target.'cfg(any(target_os = "android"))'.dependencies]
ndk-sys = "0.6"

[target.'cfg(any(target_os = "ios", target_os = "macos"))'.dependencies]
dispatch2 = "0.3"
objc2 = "0.6"
objc2-av-foundation = "0.3"
objc2-core-foundation = "0.3"
objc2-core-media = "0.3"
objc2-core-video = "0.3"
objc2-foundation = { version = "0.3", features = ["NSArray", "NSDictionary", "NSObject"] }

[profile.release]
opt-level = "z"
strip = true
lto = "thin"

[[bin]]
name = "asimov-camera-reader"
path = "src/reader/main.rs"
required-features = ["cli", "ffmpeg"]

[[bin]]
name = "asimov-camera-cataloger"
path = "src/cataloger/main.rs"
required-features = ["cli"]
